frontend/src/pages/Home/Home.module.css
.header {
  display: flex;
  justify-content: space-around;
  background-color: #27005d;
  padding: 40px 0px 10px 0px;
  width: 100%;
}

.logo-container {
  position: relative;
  padding: 0px 25px;
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
}

.logo-container img {
  position: absolute;
  top: -15px;
  right: 10px;
  width: 120px;
  height: auto;
  border-radius: 80%;
  box-shadow: 0 0 10px rgba(153, 0, 255, 0.9);
  border: 5px solid #9500ff;
}

.nav {
  padding: 0px 5%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 10px;
  width: 100%;
}

.encabezado-superior {
  width: 100%;
  height: 70%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: auto;
}

.contenedor-busqueda {
  height: 110%;
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.contenedor-botones {
  display: flex;
  align-items: center;
  width: 30%;
  gap: 20px;
  /* padding: 10px 5vw 10px 7vw; */
}

.eliminar{
  width: 100px;
  height: 35px;
  border-radius: 40px;
  font-size: 17px;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 0 20px 0 20px;
  text-align: center;
  background-color: #808080;
  color: black;
  box-shadow: 1px 2px 2px 1px black;
  border-radius: 10px;
  
}

.encabezado-inferior {
  width: 100%;
  height: 30%;
  display: flex;
  align-items: center;
}

.contenedor-de-filtros {
  display: flex;
  justify-content: flex-start;
  gap: 10px;
  /* background-color: #9400ff; */
}

.items-container {
  display: flex;
  /* flex-wrap: wrap; */
  flex-direction: row;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  gap: 3vw;
  height: auto;
  width: 90vw;
  padding: 50px;
  margin: 10px 2vw;
  background-color: rgb(174, 210, 255);
  overflow-y: auto;
}

/* Para Chrome, Safari y Opera */
::-webkit-scrollbar {
  width: 0px; /* Remover scrollbar vertical */
  height: 0px; /* Remover scrollbar horizontal */
}

/* Para Internet Explorer y Edge */
element {
  -ms-overflow-style: none;
}

.contenedor-de-parte-baja {
  width: 100%;
  display: flex;
  gap: 5%;
}

.contenedor-tabla {
  background: linear-gradient(
    to bottom left,
    rgba(77, 1, 107, 1) 0%,
    rgba(183, 0, 255, 1) 100%
  );
  height: auto;
  width: 50%;
  margin-left: 10%;
  box-shadow: 0 0.4rem 0.8rem #0005;
  border-radius: 0.8rem;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

.news {
  width: 30%;
  height: 100%;
  color: #272727;
  font-style: normal;
  font-weight: 400;
  letter-spacing: 0;
  margin: 0 auto;
}

body {
  background-color: #c8e4ff;
}

